--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Byte-compiled / optimized / DLL files
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
@@ -161,3 +162,6 @@ cython_debug/
 
 .streamlit
 secrets.toml
+
+# Ignore notebooks directory
+notebooks/
